  * Only go through u?deb packages in Generate_Package().
  * Moved all imported DebPool modules used in Packages.pm to one location.
  * Grab dsc information from dsc file already in pool in case of binary only
    uploads.
  * Allow Generate_Source() to handle binary only uploads.
  * Fix issue where Packages and Sources files were not being generated for
    binary only uploads.

 -- Andres Mejia <mcitadel@gmail.com>  Mon, 27 Oct 2008 16:38:15 -0400

debpool (0.4.1) experimental; urgency=low

  * Added 'DM-Upload-Allowed: yes' field.

 -- Andres Mejia <mcitadel@gmail.com>  Fri, 24 Oct 2008 17:13:31 -0400

debpool (0.4.0) experimental; urgency=low

  * Created a new module to handle file parsing.
  * Minor code cleanup.
  * Add target in debian/rules to generate the MANIFEST file.

 -- Andres Mejia <mcitadel@gmail.com>  Fri, 24 Oct 2008 12:15:30 -0400

debpool (0.3.10) experimental; urgency=low

  * Handle conffile renaming as suggested in
    http://wiki.debian.org/DpkgConffileHandling.
  * Fix issue where we were trying to delete obsolete files twice.
  * Fix issue where changes files were not being obsoleted for packages that
    build only architecture independent binaries (such as debpool).

 -- Andres Mejia <mcitadel@gmail.com>  Fri, 17 Oct 2008 14:08:49 -0400

debpool (0.3.9) experimental; urgency=low

  * Allow binNMUs.
    + We basically only obsolete packages of the particular architecture when
      we're uploading.

 -- Andres Mejia <mcitadel@gmail.com>  Fri, 17 Oct 2008 02:47:03 -0400

debpool (0.3.8) experimental; urgency=low

  * Use Compress::Zlib and Compress::Bzip2 to create bzip2 and gzip Packages and
    Sources files.
    + Adding Depends of libcompress-bzip2-perl.
    + (Closes: #502454)
  * Drop liblinux-inotify2-perl to Recommends. It is not necessary to use
    inotify and this would allow users of non-Linux ports of debian to use
    debpool.
  * Bumped libproc-daemon-perl up to depends.