@@ -38,12 +38,9 @@ use strict;
 use warnings;
 
 use POSIX; # This gets us strftime.
+use Proc::Daemon; # For daemon support.
 
 use DebPool::Config qw(:vars);
-
-# Okay. We're more or less ready to go. First, load some modules that we
-# know we'll be calling.
-
 use DebPool::Dirs qw(:functions :vars); # Directory management
 use DebPool::DB qw(:functions :vars); # Various databases
 use DebPool::GnuPG qw(:functions :vars); # GnuPG interaction routines
@@ -51,13 +48,15 @@ use DebPool::Logging qw(:functions :facility :level); # Logging routines
 use DebPool::Packages qw(:functions :vars); # Distribution databases
 use DebPool::Signal qw(:functions :vars); # Handle signals
 use DebPool::Parser qw(:functions :vars); # File parsing routines
+use DebPool::Release qw(:functions); # For generated Release files
+use DebPool::Gzip; # Gzip interaction routines
+use DebPool::Bzip2; # Bzip2 interaction routines
 
 # Before we do anything else, let's find out if we need to act as a daemon,
 # and if so, whether we can manage to pull it off.
 
 if ($Options{'daemon'}) {
-    Log_Message("Trying to enter daemon mode.", LOG_GENERAL, LOG_INFO);
-    require Proc::Daemon;
+    # TODO: See how we can determine if this fails.
     Proc::Daemon::Init();
     Log_Message("Now running as a daemon.", LOG_GENERAL, LOG_INFO);
 }
@@ -74,12 +73,10 @@ if (! -d "$ENV{'HOME'}/.debpool") {
 # Have support for multiple compression schemes in a dynamical fashion
 my @compression_methods;
 if ($Options{'compress_dists'}) {
-    require DebPool::Gzip; # Gzip interaction routines
-    push @compression_methods, new DebPool::Gzip;
+    push @compression_methods, DebPool::Gzip->new();
 }
 if ($Options{'bzcompress_dists'}) {
-    require DebPool::Bzip2; # Bzip2 interaction routines
-    push @compression_methods, new DebPool::Bzip2;
+    push @compression_methods, DebPool::Bzip2->();
 }
 
 # Create the directory tree. This is clean even it it already exists,
@@ -558,10 +555,7 @@ ARCH_LOOP:
             my($sigfile);
 
             if ($Options{'do_release'}) {
-                require DebPool::Release;
-
                 # Release versions are YYYY.MM.DD.HH.MM.SS (GMT) by default.
-
                 my($release_version) = strftime('%Y.%m.%d.%H.%M.%S', gmtime());
                 $relfile = DebPool::Release::Generate_Release_Triple(
                     $dist, $section, $arch, $release_version);
@@ -641,8 +635,6 @@ ARCH_LOOP:
     my($sigfile);
 
     if ($Options{'do_release'}) {
-        require DebPool::Release;
-
         # Release versions are YYYY.MM.DD.HH.MM.SS (GMT) by default.
         my($release_version) = strftime('%Y.%m.%d.%H.%M.%S', gmtime());
         $relfile = DebPool::Release::Generate_Release_Dist(
