@@ -73,7 +73,7 @@ declare a package namespace of 'DebPool::Config' and return a true value.
 
 # We use 'our', so we must have at least Perl 5.6
 
-require 5.006_000;
+use 5.006_000;
 
 # Always good ideas.
 
